# neotropolis

./: .gitattributes  CLAUDE.md  LICENSE  ODRIVE_API.md  POWER.md  README.md  TRASHBOT.md  mise.toml  motor_config.json  netdata-child-stream.conf  package-lock.json  pyproject.toml  trashbase.service  trashbot.service
display_misc/: import_diagram.py  update_emoji_resources.py
emoji/: build_seed.py  emoji_curation.tsv  preview.html  serve.py
emoji_misc/: assign_rf_codes.py  build_seed.py  serve_preview.py  update_emoji_assets.py
motor_misc/: 80-can.link  80-can.network  can_calibrate.py  can_param_access.py  can_request_bootloader.py  can_restore_config.py  can_simple.py  firmware-S1-0.6.11-1.elf  usb_force_bootloader.py
motor_tools/: 80-can.network  can_enumerate.py  can_force_bootloader.py  flat_endpoints.json  motor_config.json
radio_misc/: rx_devana_example.py
radio_tools/: rx_devana_example.py
tests/: test_crsf_protocol.py
trashbot/: base_display_cli.py  base_display_driver.py  bot_display_driver.py  bot_display_worker.py  crsf_protocol.py  display_eye_worker.py  emoji_input_cli.py  emoji_input_driver.py  emoji_list.csv  emoji_list.py  eye_display_driver.py  eye_display_worker.py  gamepad_cli.py  gamepad_driver.py  motor_cli.py  motor_config.json  motor_driver.py  pi_setup_cli.py  radio_cli.py  radio_driver.py  run_base.py  run_bot.py  system_setup_cli.py
trashbot/resources/: emoji_list.csv
